@@ -68,6 +68,15 @@ index|[
 literal|2
 index|]
 decl_stmt|;
+name|GString
+modifier|*
+name|output
+init|=
+name|g_string_new
+argument_list|(
+name|NULL
+argument_list|)
+decl_stmt|;
 name|GimpPDBStatusType
 name|status
 init|=
@@ -111,6 +120,13 @@ argument_list|(
 name|run_mode
 argument_list|)
 expr_stmt|;
+name|ts_register_output_func
+argument_list|(
+name|ts_gstring_output_func
+argument_list|,
+name|output
+argument_list|)
+expr_stmt|;
 switch|switch
 condition|(
 name|run_mode
@@ -119,14 +135,6 @@ block|{
 case|case
 name|GIMP_RUN_NONINTERACTIVE
 case|:
-comment|/*  Disable Script-Fu output  */
-name|ts_register_output_func
-argument_list|(
-name|NULL
-argument_list|,
-name|NULL
-argument_list|)
-expr_stmt|;
 if|if
 condition|(
 name|ts_interpret_string
@@ -158,6 +166,45 @@ name|status
 operator|=
 name|GIMP_PDB_CALLING_ERROR
 expr_stmt|;
+name|g_string_assign
+argument_list|(
+name|output
+argument_list|,
+name|_
+argument_list|(
+literal|"Script-Fu evaluation mode only allows "
+literal|"non-interactive invocation"
+argument_list|)
+argument_list|)
+expr_stmt|;
+break|break;
+default|default:
+break|break;
+block|}
+name|values
+index|[
+literal|0
+index|]
+operator|.
+name|data
+operator|.
+name|d_status
+operator|=
+name|status
+expr_stmt|;
+if|if
+condition|(
+name|status
+operator|!=
+name|GIMP_PDB_SUCCESS
+operator|&&
+name|output
+operator|->
+name|len
+operator|>
+literal|0
+condition|)
+block|{
 operator|*
 name|nreturn_vals
 operator|=
@@ -181,27 +228,24 @@ name|data
 operator|.
 name|d_string
 operator|=
-name|_
+name|g_string_free
 argument_list|(
-literal|"Script-Fu evaluation mode only allows "
-literal|"non-interactive invocation"
+name|output
+argument_list|,
+name|FALSE
 argument_list|)
 expr_stmt|;
-break|break;
-default|default:
-break|break;
 block|}
-name|values
-index|[
-literal|0
-index|]
-operator|.
-name|data
-operator|.
-name|d_status
-operator|=
-name|status
+else|else
+block|{
+name|g_string_free
+argument_list|(
+name|output
+argument_list|,
+name|TRUE
+argument_list|)
 expr_stmt|;
+block|}
 block|}
 end_function
 
